--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ nav {
 nav div {
   display: flex;
   align-items: center;
-  width: 20%;
+  width: 60%;
   padding: 1%;
 }
 
@@ -62,6 +62,7 @@ nav li:active {
 
 body {
   background-image: url("background.png") ;
+  height: 5000px;
 }
 
 main {
@@ -105,5 +106,53 @@ section {
 .largeSkillsContainer {
   display: flex;
   justify-content: center;
+  border: solid red 1px;
+}
+
+.largeSkillTile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  height: 250px;
+  background-color: #190A24;
+  padding: 20px;
+  border-radius: 30px;
+  text-align: center;
+  margin: 2%;
+}
+
+.largeSkillTile p {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.largeSkillTile img {
+  width: 100px;
+}
+
+.smallSkillsContainer {
+  display: flex;
+  justify-content: center;
+  border: solid red 1px;
+  flex-wrap: wrap;
+}
+
+.smallSkillTile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 120px;
+  background-color: #190A24;
+  padding: 20px;
+  border-radius: 30px;
+}
+
+.smallSkillTile img {
+  width: 75px;
+  margin-bottom: 10px;
 }
 
